--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,5 +29,10 @@
     <string name="status_textview_speed">Speed:</string>
     <string name="settings_textview_threadpriority">Thread Priority:</string>
     <string name="version">Version: 0.4.1</string>
+    
+    <string name="action_settings">Settings</string>
+    <string name="title_news">News</string>
+    <string name="title_status">Status</string>
+    <string name="title_settings">Settings</string>
 
 </resources>
